Change sitemap url
Change-Id: Idb41f61f65982afed92e92a0f6be92a704e50dfd
Signed-off-by: Jens Reidel <adrian@travitia.xyz>
Signed-off-by: Omar Mohamed <omarcoptan9@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ description: "The LineageOS Wiki"
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
-url: https://wiki.lineageos.org
+url: https://garnet-playground.github.io
 
 plugins:
   - jekyll-redirect-from
